--- a/themes/default/css/common.css
+++ b/themes/default/css/common.css
@@ -43,3 +43,150 @@
 .footnav ul li p{
     color: #ffffff;
 }
+.footnav ul li .active{
+    color: #ffb230;
+}
+.conBox{
+    background: #faf9fe;
+}
+.header{
+    height: 40px;
+    background: #4c4c4c;
+    text-align: center;
+    line-height: 40px;
+    color: #ffffff;
+    position: relative;
+}
+.header span{
+    font-size: 0.75rem;
+}
+.header a{
+    float: left;
+    background: url("../icon/left.png") no-repeat;
+    background-size: 100% 100%;
+    height: 12px;
+    width: 12px;
+    margin: 0.6rem;
+    position: absolute;
+    left: 0;
+}
+.banner{
+    text-align: center;
+    margin-bottom: 2.5rem;
+}
+.messList li{
+    height: 36px;
+    line-height: 36px;
+    padding-left: 1rem;
+    border-bottom: 1px solid #d9d8dd;
+}
+.messList li span{
+    color:#f99519;
+    font-size: 0.75rem;
+}
+.buycar{
+    position: fixed;
+    left:0;
+    bottom: 0;
+    width: 16rem;
+}
+.addnow{
+    padding: 0.6rem 1.6rem;
+    background: #e90212;
+    color: #ffffff;
+    font-size: 0.75rem;
+    float: right;
+}
+.addcarnow{
+    padding: 0.6rem 1.6rem;
+    background: #f39900;
+    color: #ffffff;
+    font-size: 0.75rem;
+    float: right;
+}
+.car{
+    float: right;
+    background: url("../icon/car.png") no-repeat center center;
+    background-size: 1.2rem 1.2rem;
+    width: 1.2rem;
+    height:1.2rem;
+    padding: 0.3rem 0.4rem;
+    margin-right: 0.2rem;
+    border: 1px solid #d3d3d3;
+    position: relative;
+}
+.car span{
+    width: 16px;
+    height:16px;
+    line-height: 16px;
+    background: red;
+    color: #ffffff;
+    text-align: center;
+    position: absolute;
+    right: -2px;
+    top:-2px;
+    border-radius: 50%;
+}
+.centerbox {
+    margin: 7rem 0;
+    text-align: center;
+}
+.centerbox p{
+    font-size: 0.75rem;
+    color: #9d9ea5;
+    padding: 2rem 0;
+}
+.centerbox button{
+    height: 34px;
+    background: #de1d1d;
+    width: 8rem;
+    color: #ffffff;
+    border-radius: 5px;
+    border: none;
+}
+.listbox li{
+    width: 4rem;
+    box-sizing: border-box;
+    border: 1px solid #dedede;
+    border-left: none;
+    height: 40px;
+    line-height: 40px;
+    font-size: 0.75rem;
+    color: #9e9e9e;
+    float: left;
+    text-align: center;
+}
+.listbox li:nth-last-child(1){
+    border-right: none;
+}
+.listbox li.active{
+    color: #dc4945;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
